# ai-gov-gen

./: README.md  pyproject.toml  requirements.txt
ai_gov_gen/: __init__.py  assessor.py  exporter.py  generator.py  questions.py  routes.py
ai_gov_gen/templates/: about.html  base.html  error.html  index.html  policy_doc.html  questionnaire.html  results.html
tests/: __init__.py  test_app_factory.py  test_assessor.py  test_exporter.py  test_generator.py  test_questions.py
